# explicit-free-list

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt
include/: bits.h  manip.h  memlib.h  mm.h
src/: main.cpp  memlib.c  memlib.cpp  mm.cpp
tests/: tests.cpp
